--- a/HomaPage.html
+++ b/HomaPage.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h1>Hello There</h1>
+    <h1>Hello There, now we are learning Git in SCC practical class</h1>
   </body>
 </html>
