--- a/HomaPage.html
+++ b/HomaPage.html
@@ -1,5 +1,6 @@
 <html>
   <body>
     <h1>Hello There, now we are learning Git in SCC practical class</h1>
+    <p>I am spongebob</p>
   </body>
 </html>
